[tool.poetry]
name = "server-prototype"
version = "0.0.1"
description = "Server template for any usage"
authors = ["InnoNodo"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
loguru = "^0.7.2"
sqlalchemy = "^2.0.35"
werkzeug = "^3.0.4"
